Fix titile cookbook and page styling on mobile

--- a/client/src/components/RecipeForm/RecipeForm.scss
+++ b/client/src/components/RecipeForm/RecipeForm.scss
@@ -46,21 +46,27 @@
         display: flex;
         flex-direction: column;
         flex-grow: 2;
+        width: 100%;
+
+        @include tablet {
+            width: auto;
+        }
     }
 
     &__book-page-group {
         display: flex;
+        justify-content: space-between;
         width: 100%;
 
-        :first-child {
-            margin-right: 1.5rem;
-            width: 90%;
+        @include tablet {
+            width: auto;
         }
     }
 
     &__input-group {
         display: flex;
         flex-direction: column;
+        width: calc(50% - 1rem);
     }
 
     &__label {
